<resources>
    <string name="app_name">StuffTracker</string>
    <string name="launch_year">Launch Year:</string>
    <string name="launch_number">Launch Number:</string>
    <string name="launch_part">Launch Part:</string>
    <string name="close">Close</string>
    <string name="settings_header">Settings</string>
    <string name="show_all">Show all objects </string>
    <string name="true_north">Use true north </string>
    <string name="camera_ratio">Camera multiplier, modify such that points are stationary compared to distant points when the device is rotated</string>
    <string name="camera_ratio_hint">Camera multiplier</string>
    <string name="filter_hint">Filter by name or identifier</string>
    <string name="show_satellite">Show satellites</string>
    <string name="show_rocket_body">Show rocket bodies</string>
    <string name="show_debris">Show debris</string>
    <string name="elevation_desc">Elevation:</string>
    <string name="azimuth_desc">Azimuth:</string>
    <string name="favorite_desc">Favorite:</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="velocity_desc">Velocity:</string>
    <string name="eccentricity_desc">Eccentricity:</string>
    <string name="altitude_desc">Altitude:</string>
    <string name="latitude_desc">Latitude</string>
    <string name="longitude_desc">Longitude:</string>
    <string name="point_fav">Point to favorites:</string>
</resources>
