<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/popup_bg">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <net.steamcrafted.materialiconlib.MaterialIconView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:materialIcon="close"
        app:materialIconColor="#fff"
        app:materialIconSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="@+id/nameText"
        android:contentDescription="@string/close"
        android:background="@android:color/transparent"
        android:id="@+id/close_button" />
    <TableLayout
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:id="@+id/launch_year_desc"
                android:textColor="@android:color/white"
                android:text="@string/launch_year"
                android:textSize="15sp" />

            <TextView
                android:paddingStart="10dp"
                android:textColor="@android:color/white"
                android:paddingEnd="0dp"
                android:id="@+id/launch_year"
                android:textSize="15sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/launch_number_desc"
                android:textColor="@android:color/white"
                android:text="@string/launch_number"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:textColor="@android:color/white"
                android:paddingEnd="0dp"
                android:id="@+id/launch_number"
                android:textSize="15sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/launch_part_desc"
                android:text="@string/launch_part"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/launch_part"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>
        <TableRow android:paddingTop="16dp">
            <TextView
                android:id="@+id/elevation_desc"
                android:text="@string/elevation_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/elevation"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/azimuth_desc"
                android:text="@string/azimuth_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/azimuth"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>
        <TableRow android:paddingTop="20dp">
            <TextView
                android:id="@+id/velocity_desc"
                android:text="@string/velocity_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/velocity"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/eccentricity_desc"
                android:text="@string/eccentricity_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/eccentricity"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>
        <TableRow android:paddingTop="20dp">
            <TextView
                android:id="@+id/latitude_desc"
                android:text="@string/latitude_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/latitude"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/longitude_desc"
                android:text="@string/longitude_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/longitude"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/altitude_desc"
                android:text="@string/altitude_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:id="@+id/altitude"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </TableRow>
        <TableRow android:paddingTop="20dp">
            <TextView
                android:id="@+id/favorite_desc"
                android:text="@string/favorite_desc"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <Switch
                android:id="@+id/favorite" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>